fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,10 @@ h3 {
 
 h1 {
   font-size: 96px;
+  line-height: 1;
 }
+
+
 
 h2 {
   font-size: 48px;
@@ -36,7 +39,8 @@ h3 {
 }
 
 body {
-  margin-top: 100px;
+  margin: 100px 0;
+
 }
 
 .primary-link {
@@ -65,6 +69,7 @@ body {
 }
 
 p {
+  text-align: center;
   padding: 20px;
   border-radius: 4px;
   font-size: 18px;
@@ -94,4 +99,29 @@ p {
 
 .email-link:hover {
   text-decoration: underline;
+}
+
+.project-link {
+  display: block;
+  text-align: center;
+  margin: 0 20px;
+}
+
+.primary-link:hover {
+color: white
+}
+
+@media(max-width: 900px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1;
+  }
+  h2 {
+    font-size:32px;
+    text-align: center;
+  }
+
+  p {
+    text-align: center;
+  }
 }
